--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- cdn Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1 class="heading">Quote Generator</h1>
+      <h2 class="quote">
+        <i class="fa-sharp fa-solid fa-quote-left"></i>
+        <span>quote</span>
+        <i class="fa-sharp fa-solid fa-quote-right"></i>
+      </h2>
+      <p class="author" id="author">~ Author</p>
+      <button class="btn" id="btn">Get a quote</button>
+    </div>
+  </body>
 </html>
