--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
@@ -25,5 +27,7 @@
       <p class="author" id="author">~ Author</p>
       <button class="btn" id="btn">Get a quote</button>
     </div>
+
+    <script src="./app.js"></script>
   </body>
 </html>
